--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-image": "^38.1.1",
         "ckeditor4": "^4.22.1"
     }
 }
